--- a/research/musgenvae_lsreg/index.html
+++ b/research/musgenvae_lsreg/index.html
@@ -132,7 +132,7 @@
 
                                     <hr/>
 
-                                    <h2>Table 1. Generated music examples labeled with four emotions using - CVAE-EmoReg model</h2>
+                                    <h2>Table 1. Generated MIDI music examples labeled with four emotions using - CVAE-EmoReg model</h2>
                                     
                                     <table class="cala-szer">
                                         <tr>
