Educja index.html - popwraki

--- a/research/musgenvae_lsreg/index.html
+++ b/research/musgenvae_lsreg/index.html
@@ -152,7 +152,7 @@
 
                                         <tr>
                                             <td>
-                                                Example_1   
+                                                Example_1  (musical notation in Fig. 3a)
                                             </td>
                                             <td>
                                                 e1   
@@ -213,7 +213,7 @@
                             <tr>
 
                                 <td>
-                                    Example_4   
+                                    Example_4 (musical notation in Fig. 3b)   
                                 </td>
                                 <td>
                                     e2   
@@ -272,7 +272,7 @@
 
                 <tr>
                     <td>
-                        Example_7   
+                        Example_7    (musical notation in Fig. 3c)
                     </td>
                     <td>
                         e3   
@@ -326,7 +326,7 @@
 
                 <tr>
                     <td>
-                        Example_10   
+                        Example_10 (musical notation in Fig. 3d)  
                     </td>
                     <td>
                         e4   
