Educja index.html - popwraki 2

--- a/research/musgenvae_lsreg/index.html
+++ b/research/musgenvae_lsreg/index.html
@@ -106,7 +106,7 @@
 
                                     <ul>
                                         <li><a HREF="https://github.com/grekowj/musgenvaecnn_4v" target="_blank">
-                                                Training dataset, code, generated examples  _ do poprawy</a></li>
+                                                Training dataset, code, and generated examples </a></li>
                                         <!--<li><a HREF="./generated_exaples">Generated exaples </a></li>-->                              
 
                                     </ul>
