--- a/jgResearch.html
+++ b/jgResearch.html
@@ -360,6 +360,21 @@
                                             </p>
                                         </li>
 
+                                        <li>
+                                            <p>
+                                                Grekow, J., Regulacja przestrzeni ukrytej wariacyjnego autoenkodera
+                                                względem emocji generowanych sekwencji muzycznych, 
+                                                Przeglad Elektrotechniczny, 2025, 101(4), pp. 172–177
+                                            </p>
+                                        </li>
+
+                                        <li>
+                                            <p>
+                                                Grekow, J., Emotional Regularization of the Latent Space of a Variational Autoencoder for Generating Musical Sequences," 
+                                                in IEEE Access, 2025, doi: 10.1109/ACCESS.2025.3626217
+                                            </p>
+                                        </li>
+
 
 
                                     </ul>
