--- a/jgResearch.html
+++ b/jgResearch.html
@@ -112,6 +112,7 @@
                                         <li><a HREF="./research/mrs/">Content-based music recommendation</a></li>
                                         <li><a HREF="./research/musgenvae/">Monophonic music generation with a given emotion</a></li>
                                         <li><a HREF="./research/musgenvaecnn_4v/">Generating polyphonic symbolic emotional music in the style of J.S.Bach</a></li>
+                                        <li><a HREF="./research/musgenvae_lsreg/">Emotional regularization of the latent space of a VAE for generating musical sequences</a></li>
 
 
                                     </ul>
