--- a/jgPraceDypl.html
+++ b/jgPraceDypl.html
@@ -98,14 +98,11 @@
                                     </p>
 
                                     <ul>  
-                                        <li>Maurycy Zdanowicz - Wstrzykiwanie zależności na platformie .NET</li>
-                                        <li>Michał Król - Detekcja artysty na podstawie cech audio pobranych z pliku mp3</li>
-                                        <li>Jakub Kimsza - Optymalizacja środowiska uruchomieniowego JVM</li>
-                                        <li>Łukasz Łaniewski - Analiza strumieni i tradycyjnych pętli w języku Java</li>
-                                        <li>Marcin Mironiuk - Mechanizmy synchronizacji w języku Java</li>
+                                        <li> Łukasz Kiersnowski - Generowanie danych syntetycznych z wykorzystaniem sieci GAN dla małych zbiorów danych</li>
+                                        
                                         <br/>
-                                        <li>Wróbel Aleksandra  - Generowanie muzyki MIDI z daną emocją </li>
-                                        <li>Wroblewska Joanna  - Rozpoznawanie języka migowego za pomocą analizy obrazu </li>
+<!--                                        <li>Wróbel Aleksandra  - Generowanie muzyki MIDI z daną emocją </li>
+                                        <li>Wroblewska Joanna  - Rozpoznawanie języka migowego za pomocą analizy obrazu </li>-->
                                         
 
 
@@ -130,7 +127,7 @@
 
                                     </p>
                                     <ul>   
-                                        <li>Zajkowski Wojciech - Rozpoznawanie funkcji harmonicznych w plikach MIDI</li>
+                                        <!--<li>Zajkowski Wojciech - Rozpoznawanie funkcji harmonicznych w plikach MIDI</li>-->
                                         <!--<li>Mateusz Auron - System tworzenia map urządzeń sieciowych i ich monitoring </li>-->
                                         <li> ... </li>
 
@@ -220,6 +217,11 @@
                                     </p>
 
                                     <ul>
+                                        <li>Maurycy Zdanowicz (2025) - Wstrzykiwanie zależności na platformie .NET</li>
+                                        <li>Michał Król (2025) - Detekcja artysty na podstawie cech audio pobranych z pliku mp3</li>
+                                        <li>Jakub Kimsza (2025) - Optymalizacja środowiska uruchomieniowego JVM</li>
+                                        <li>Łukasz Łaniewski (2025) - Analiza strumieni i tradycyjnych pętli w języku Java</li>
+                                        <li>Marcin Mironiuk (2025) - Mechanizmy synchronizacji w języku Java</li>
                                         <li>Dominik Olender (2025) - Detekcja przewodów elektrycznych na podstawie zdjęć</li>
                                         <li>Awramiuk Paweł (2024) - Detekcja stylu muzycznego w utworach audio z użyciem sieci neuronowych </li>
                                         <li>Wasiluk Maksymilian (2023) - Detekcja emocji w plikach muzycznych</li>
